CountSet 구현 및 output 수정